--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,13 @@ nosetests.xml
 pep8.txt
 pylint.txt
 reports
-horizon.egg-info
+*.egg-info
 openstack_dashboard/local/local_settings.py
 openstack_dashboard/local/.secret_key_store
 openstack_dashboard/test/.secret_key_store
 doc/build/
 doc/source/sourcecode
-/static/
+static/
 .venv
 .tox
 build
@@ -25,3 +25,4 @@ dist
 AUTHORS
 ChangeLog
 tags
+pbr-0.8.0-py2.6.egg
