--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ openstack_dashboard/local/.secret_key_store
 openstack_dashboard/test/.secret_key_store
 doc/build/
 doc/source/sourcecode
-static/
+/static/
 .venv
 .tox
 build
